[gd_scene load_steps=6 format=3 uid="uid://6vc6xqon6plj"]

[ext_resource type="Script" uid="uid://dcbh1bwjv7cwf" path="res://scripts/lab_line.gd" id="1_5cehb"]
[ext_resource type="Texture2D" uid="uid://8wpoh7wd7ocl" path="res://assets/lablinebackground.png" id="2_qqnpy"]
[ext_resource type="Theme" uid="uid://cjt1wgi2nnutb" path="res://themes/ChatBubbleTheme.tres" id="3_ew6gc"]
[ext_resource type="Theme" uid="uid://bc463cnh1wi1g" path="res://themes/button_variant_1.tres" id="4_00y24"]
[ext_resource type="Texture2D" uid="uid://brbfpffrofjsd" path="res://assets/molenpc1.png" id="5_be2sr"]

[node name="LabLine" type="Node2D"]
script = ExtResource("1_5cehb")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(647, 361)
scale = Vector2(0.847861, 0.722992)
texture = ExtResource("2_qqnpy")

[node name="DialogueUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 13.0
offset_top = -61.0
offset_right = 53.0
offset_bottom = -21.0

[node name="DialogueLabel" type="Label" parent="DialogueUI"]
layout_mode = 0
offset_left = 432.0
offset_top = 117.0
offset_right = 703.0
offset_bottom = 367.0
theme = ExtResource("3_ew6gc")
theme_override_font_sizes/font_size = 25
text = "adssaads"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="SkipButton" type="Button" parent="DialogueUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.525
anchor_top = -3.075
anchor_right = 0.525
anchor_bottom = -3.075
offset_left = 476.0
offset_top = 388.0
offset_right = 626.0
offset_bottom = 438.0
theme = ExtResource("4_00y24")
text = "Next"
metadata/_edit_use_anchors_ = true

[node name="TicketSpawn" type="Node2D" parent="."]

[node name="CustomerSprite" type="Sprite2D" parent="TicketSpawn"]
position = Vector2(367, 368)
scale = Vector2(0.315918, 0.315918)
texture = ExtResource("5_be2sr")
